Added colors for tshirts

--- a/Sasho_work/tshirts.html
+++ b/Sasho_work/tshirts.html
@@ -24,7 +24,7 @@
     <div id = "tshirt_offer1">
         <img id = "right_arrow" src = "../right_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onRightArrowClick1()'>
         <img id = "left_arrow" src = "../left_arrow.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' onclick = 'onLeftArrowClick1()'>
-        <img id = "image_tshirt_1" src = "../Images/puma_image1-removebg-preview.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "Puma tshirt " mouse>
+        <img id = "image_tshirt_1" src = "../Images/puma_image1-removebg-preview.png" onmouseover = 'hoverImage1()' onmouseout= 'unhoverImage1()' alt = "Puma T-hirt Black" mouse>
         <h3 id = "description_tshirt_1">Retro Puma Tshirt</h3>
         <h2 id = "price_tshirt_1">$9.99</h2>
         <button onclick="AddtoCart(image_tshirt_1, 'price_tshirt_1', 'add_to_card_tshirt_1')" id = "add_to_card_tshirt_1">Add to cart</button>
@@ -32,10 +32,10 @@
 
 
 
-    <div id = "tshirt_offer2">
+    <div id = "tshirt_offer2"> 
         <img id = "right_arrow2" src = "../right_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onRightArrowClick2()'>
         <img id = "left_arrow2" src = "../left_arrow.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' onclick = 'onLeftArrowClick2()'>
-        <img id = "image_tshirt_2" src = "../Images/nike_image1-removebg-preview.png" onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "Nike tshirt " mouse>
+        <img id = "image_tshirt_2" src = '../Images/nike_image2-removebg-preview.png' onmouseover = 'hoverImage2()' onmouseout= 'unhoverImage2()' alt = "Nike Sport T-Shirt Dark Blue" mouse>
         <h3 id = "description_tshirt_2">
             Sport Tshirt Nike for Training and Outdoor Activity 
         </h3>
