All of the t-shirts have colors displayed when they are bought

--- a/Sasho_work/tshirts.html
+++ b/Sasho_work/tshirts.html
@@ -47,7 +47,7 @@
     <div id = "tshirt_offer3">
         <img id = "right_arrow3" src = "../right_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onRightArrowClick3()'>
         <img id = "left_arrow3" src = "../left_arrow.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' onclick = 'onLeftArrowClick3()'>
-        <img id = "image_tshirt_3" src = "../Images/jj_1.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Jack & Jones Tshirt" mouse>
+        <img id = "image_tshirt_3" src = "../Images/jj_1.png" onmouseover = 'hoverImage3()' onmouseout= 'unhoverImage3()' alt = "Jack & Jones T-Shirt Black" mouse>
         <h3 id = "description_tshirt_3">
             JACK & JONES Men's Tshirt
         </h3>
