Design for the website
Changed the whole website design, made the home and sunglasses page with this design

--- a/home.html
+++ b/home.html
@@ -4,44 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link href = "home.css" rel = "stylesheet">
+    <link href="home.css" rel="stylesheet">
+    <link rel="stylesheet" href="Dido_work/navbar.css">
 </head>
 <body>
     <nav>
         <div id="container">
             <ul class="menu">
-                <li id="Home"><a href="home.html">Home</a></li>
-                <li id="tshirts.html"><a href="./Sasho_work/tshirts.html">T-Shirts</a></li>
-                <li id="tshirts.html"><a href="./Martin_work/trousers.html">Trousers</a></li>
-                <li id="tshirts.html"><a href="./Martin_work/shoes.html">Shoes</a></li>
-                <li id="tshirts.html"><a href="./Dido_work/sunglasses.html">Sunglasses</a></li>
-                <li id="tshirts.html"><a href="./Dido_work/cart.html">Shopping Cart</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="./Sasho_work/tshirts.html">T-Shirts</a></li>
+                <li><a href="./Martin_work/trousers.html">Trousers</a></li>
+                <li><a href="./Martin_work/shoes.html">Shoes</a></li>
+                <li><a href="./Dido_work/sunglasses.html">Sunglasses</a></li>
+                <li><a href="./Dido_work/cart.html">Shopping Cart</a></li>
             </ul>
         </div>
     </nav>
-    <div id="tshirts">
-        <a href="./Sasho_work/tshirts.html"><img id = "TshirtImg" src="../Images/i_m_cool_black_kid.png"></a> 
-        <p id="text1">Fashionable Tshirts with Great Designs!</p>
-    </div><br>
-    <div id="pants">
-        <a href="./Martin_work/trousers.html"><img id = "PantsImg" src="..//Images/img2.png"></a> 
-        <p id="text2">Trendy and Comfortable Trousers!</p>
-    </div><br>
-    <div id="sunglasses">
-        <a href="./Dido_work/sunglasses.html"><img id = "SunglassesImg" src="../Images/img3.png"></a>
-        <p id="text3">Elegant Sunglasses for Men and for Women!</p>
-    </div><br>
-    <div id="shoes">
-        <a href="./Martin_work/shoes.html"><img id = "ShoesImg" src="../Images/img4.png"></a>
-        <p id="text4">Popular and Cool Shoes for a Good Price!</p>
+    <div id="offers">
+        <div class="offer" id="tshirts">
+            <a href="./Sasho_work/tshirts.html"><img id="TshirtImg" src="../Images/i_m_cool_black_kid.png" alt="Tshirts"></a>
+            <p id="text1">Fashionable Tshirts with Great Designs!</p>
+        </div>
+        <div class="offer" id="pants">
+            <a href="./Martin_work/trousers.html"><img id="PantsImg" src="../Images/img2.png" alt="Pants"></a>
+            <p id="text2">Trendy and Comfortable Trousers!</p>
+        </div>
+        <div class="offer" id="sunglasses">
+            <a href="./Dido_work/sunglasses.html"><img id="SunglassesImg" src="../Images/img3.png" alt="Sunglasses"></a>
+            <p id="text3">Elegant Sunglasses for Men and for Women!</p>
+        </div>
+        <div class="offer" id="shoes">
+            <a href="./Martin_work/shoes.html"><img id="ShoesImg" src="../Images/img4.png" alt="Shoes"></a>
+            <p id="text4">Popular and Cool Shoes for a Good Price!</p>
+        </div>
     </div>
-    
     <footer>
-        <h2 id = "contact_us_heading">Contact us</h2>
-        <ul id = "instagrams">
-            <a href = "https://www.instagram.com/m.d.i.m.i.t.r.o.v/"><li>@m.d.i.m.i.t.r.o.v</li></a>
-            <a href = "https://www.instagram.com/tova_e_sasho/"><li>@tova_e_sasho</li></a>
-            <a href = "https://www.instagram.com/deyangolosmanov/"><li>@deyangolosmanov</li></a>
+        <h2 id="contact_us_heading">Contact us</h2>
+        <ul id="instagrams">
+            <li><a href="https://www.instagram.com/m.d.i.m.i.t.r.o.v/">@m.d.i.m.i.t.r.o.v</a></li>
+            <li><a href="https://www.instagram.com/tova_e_sasho/">@tova_e_sasho</a></li>
+            <li><a href="https://www.instagram.com/deyangolosmanov/">@deyangolosmanov</a></li>
         </ul>
     </footer>
     <script src="home.js"></script>
