--- a/Dido_work/sunglasses.html
+++ b/Dido_work/sunglasses.html
@@ -38,12 +38,12 @@
             <button onclick="AddtoCart(image_sunglasses_2, 'price_sunglasses_2', 'add_to_cart_sunglasses_2')" id="add_to_cart_sunglasses_2">Add to cart</button>
         </div>
         <div class="sunglasses_offer" id="sunglasses_offer3">
-            <img id="right_arrow3" src="../right_arrow.png" onmouseover="hoverImage2()" onmouseout="unhoverImage2()" onclick="RightArrow2()">
-            <img id="left_arrow3" src="../left_arrow.png" onmouseover="hoverImage2()" onmouseout="unhoverImage2()" onclick="LeftArrow2()">
-            <img id="image_sunglasses_3" src="../Images/sunglasses2.3.png" onmouseover="hoverImage2()" onmouseout="unhoverImage2()" alt="Sunglasses with classic c de cartier motif">
+            <img id="right_arrow3" src="../right_arrow.png" onmouseover="hoverImage3()" onmouseout="unhoverImage3()" onclick="RightArrow3()">
+            <img id="left_arrow3" src="../left_arrow.png" onmouseover="hoverImage3()" onmouseout="unhoverImage3()" onclick="LeftArrow3()">
+            <img id="image_sunglasses_3" src="../Images/sunglasses3.1.png" onmouseover="hoverImage3()" onmouseout="unhoverImage3()" alt="CARRERA 303/S W97/9O">
             <h3 id="description_sunglasses_3">Décor C sunglasses in metal with a smooth golden finish, square shape and blue graduated lenses. Dimensions: 58 mm lenses, 16 mm bridge, 145 mm temples.</h3>
             <h2 id="price_sunglasses_3">$79.99</h2>
-            <button onclick="AddtoCart(image_sunglasses_2, 'price_sunglasses_3', 'add_to_cart_sunglasses_3')" id="add_to_cart_sunglasses_3">Add to cart</button>
+            <button onclick="AddtoCart(image_sunglasses_3, 'price_sunglasses_3', 'add_to_cart_sunglasses_3')" id="add_to_cart_sunglasses_3">Add to cart</button>
         </div>
     </div>
     <script src="sunglasses.js"></script>
